Adding the actual content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-# danevandy99.github.io
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>Chick - A Re-hatching of the Bird App</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="description" content=">A Re-hatching of the Bird App" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="icon" href="img/favicon.ico">
+</head>
+<body>
+  <div class="center-on-page">
+
+    <div class="row">
+      <img src="img/hatching_chick.png" width="65" height="auto" aria-label="hatching chick emoji" />
+      <h1>Chick</h1>
+    </div>
+    <h5>A Re-hatching of the Bird App</h5>
+
+    <p>
+      Let’s get back to the basics. Short posts. Live reactions. Shouts into the void. Your unpopular opinion (that’s actually not that unpopular). This is the bird app, but better. Chick is designed for quick, stream-of-consciousness posts. It’s perfect for live-blogging events, and sports games, or sharing your thoughts, musings, code snippets, and everything in between. This is the new bird app. A return to what made the original so great.
+    </p>
+
+    <a href="https://forms.gle/nmZt4Dsm9BcdjqxB6">Get on the waitlist</a>
+  </div>
+</body>
+</html>
