Improve font jumping

--- a/index.html
+++ b/index.html
@@ -5,8 +5,69 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content=">A Re-hatching of the Bird App" />
-  <link rel="stylesheet" type="text/css" href="style.css" />
   <link rel="icon" href="img/favicon.ico">
+  <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+  <style>
+    body {
+      padding: 0px;
+      margin: 0px;
+      font-family: "Roboto", Arial, Helvetica, sans-serif;
+    }
+
+    .center-on-page {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      width: 100vw;
+      background-color: #111111;
+    }
+
+    img {
+      object-fit: contain;
+    }
+
+    .row {
+      display: flex;
+      flex-direction: row;
+      gap: 15px;
+      align-items: center;
+      justify-items: center;
+    }
+
+    h1 {
+      color: #eeeeee;
+      font-size: 44pt;
+      margin-bottom: 0px;
+      margin-top: 0px;
+    }
+
+    h5 {
+      color: #aaaaaa;
+      font-size: 14pt;
+      font-weight: 300;
+      margin-top: 5px;
+      margin-bottom: 0px;
+    }
+
+    a {
+      border-radius: 20px;
+      background-color: #DD7624;
+      color: white;
+      padding: 10px 30px;
+      text-decoration: none;
+    }
+
+    p {
+      max-width: 100%;
+      width: 768px;
+      color: #888888;
+      margin-bottom: 40px;
+      text-align: center;
+      margin-top: 25px;
+    }
+  </style>
 </head>
 <body>
   <div class="center-on-page">
