--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h5>A Re-hatching of the Bird App</h5>
 
     <p>
-      Let’s get back to the basics. Short posts. Live reactions. Shouts into the void. Your unpopular opinion (that’s actually not that unpopular). This is the bird app, but better. Chick is designed for quick, stream-of-consciousness posts. It’s perfect for live-blogging events, and sports games, or sharing your thoughts, musings, code snippets, and everything in between. This is the new bird app. A return to what made the original so great.
+      Let’s get back to the basics. Short posts. Live reactions. Shouts into the void. Your unpopular opinion (that’s actually not that unpopular). This is the bird app, but better. Chick is designed for quick, stream-of-consciousness posts. It’s perfect for live-blogging events and sports games, or sharing your thoughts, musings, code snippets, and everything in between. This is the new bird app. A return to what made the original so great.
     </p>
 
     <a href="https://forms.gle/nmZt4Dsm9BcdjqxB6">Get on the waitlist</a>
