--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <title>Chick - A Re-hatching of the Bird App</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <meta name="description" content=">A Re-hatching of the Bird App" />
-  <meta name="theme-color" content="#111111">
+  <meta name="description" content="A Re-hatching of the Bird App" />
+  <meta name="theme-color" content="#111111" />
+  <meta name="og:image" content="img/og_image.png" />
   <link rel="icon" href="img/favicon.ico">
   <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
   <style>
