Make og:image link absolute

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="A Re-hatching of the Bird App" />
   <meta name="theme-color" content="#111111" />
-  <meta name="og:image" content="img/og_image.png" />
+  <meta name="og:image" content="https://danevandy99.github.io/img/og_image.png" />
   <link rel="icon" href="img/favicon.ico">
   <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
   <style>
