--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
   <meta name="description" content="A Re-hatching of the Bird App" />
   <meta name="theme-color" content="#111111" />
   <meta name="og:image" content="https://danevandy99.github.io/img/og_image.png" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://danevandy99.github.io/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Chick - A Re-hatching of the Bird App">
+  <meta property="og:description" content="A Re-hatching of the Bird App">
+  <meta property="og:image" content="https://danevandy99.github.io/img/og_image.png">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="danevandy99.github.io">
+  <meta property="twitter:url" content="https://danevandy99.github.io/">
+  <meta name="twitter:title" content="Chick - A Re-hatching of the Bird App">
+  <meta name="twitter:description" content="A Re-hatching of the Bird App">
+  <meta name="twitter:image" content="https://danevandy99.github.io/img/og_image.png"
+
   <link rel="icon" href="img/favicon.ico">
   <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
   <style>
