--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta property="twitter:url" content="https://danevandy99.github.io/">
   <meta name="twitter:title" content="Chick - A Re-hatching of the Bird App">
   <meta name="twitter:description" content="A Re-hatching of the Bird App">
-  <meta name="twitter:image" content="https://danevandy99.github.io/img/og_image.png"
+  <meta name="twitter:image" content="https://danevandy99.github.io/img/og_image.png">
 
   <link rel="icon" href="img/favicon.ico">
   <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
